--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
    </head>
    <body background="sky.png">
       <center>
-      <a href="https://github.com/kapitolinab/nt/blob/main/index.html"><img src="err.jpg" alt="error" width="80" height="80" id="nach"></a>
+      <a href="https://kapitolinab.github.io/nt/"><img src="err.jpg" alt="error" width="80" height="80" id="nach"></a>
       <a href="https://optical.toys/"><img src="bliss.jpg" alt="bliss" width="80" height="80"></a>
       <a href="https://paint.toys/calligram/"><img src="gr.gif" alt="glitterrainbow" width="80" height="80"></a>
       <a href="file:///C:/Users/%D0%9A%D0%B0%D0%BF%D0%BE%D1%87%D0%BA%D0%B0/Documents/destroyka/dmwm/th1.html"><img src="danger.gif" alt="DANGER" width="80" height="80"></a>
@@ -71,7 +71,7 @@
 
       <nav class="n">
          <ul class="np">
-            <li><a href="file:///C:/Users/%D0%9A%D0%B0%D0%BF%D0%BE%D1%87%D0%BA%D0%B0/Documents/destroyka/dmwm/toyhouse.html" class="active">glavnaia</a></li>
+            <li><a href="https://kapitolinab.github.io/nt/" class="active">glavnaia</a></li>
             <li><a href="file:///C:/Users/%D0%9A%D0%B0%D0%BF%D0%BE%D1%87%D0%BA%D0%B0/Documents/destroyka/dmwm/th1.html">about us</a></li>
             <li><a href="file:///C:/Users/%D0%9A%D0%B0%D0%BF%D0%BE%D1%87%D0%BA%D0%B0/Documents/destroyka/dmwm/th2.html">toys availible</a></a></li>
             <li><a href="file:///C:/Users/%D0%9A%D0%B0%D0%BF%D0%BE%D1%87%D0%BA%D0%B0/Documents/destroyka/dmwm/th3.html">apply for a toy now!</a></a></li>
@@ -137,5 +137,6 @@
       </center>
    </body>
 </html>
+
 
 
