--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
             <li><a href="https://kapitolinab.github.io/nt/" class="active">glavnaia</a></li>
             <li><a href="https://kapitolinab.github.io/nt/th1.html">about us</a></li>
             <li><a href="https://kapitolinab.github.io/nt/th2.html">toys availible</a></a></li>
-            <li><a href="file:///C:/Users/%D0%9A%D0%B0%D0%BF%D0%BE%D1%87%D0%BA%D0%B0/Documents/destroyka/dmwm/th3.html">apply for a toy now!</a></a></li>
+            <li><a href="https://kapitolinab.github.io/nt/th3.html">apply for a toy now!</a></a></li>
             <li><a href="#ct">the coolest one</a></a></li>
          </ul>
       </nav>
@@ -137,6 +137,7 @@
       </center>
    </body>
 </html>
+
 
 
 
