--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
       <a href="https://kapitolinab.github.io/nt/"><img src="err.jpg" alt="error" width="80" height="80" id="nach"></a>
       <a href="https://optical.toys/"><img src="bliss.jpg" alt="bliss" width="80" height="80"></a>
       <a href="https://paint.toys/calligram/"><img src="gr.gif" alt="glitterrainbow" width="80" height="80"></a>
-      <a href="file:///C:/Users/%D0%9A%D0%B0%D0%BF%D0%BE%D1%87%D0%BA%D0%B0/Documents/destroyka/dmwm/th1.html"><img src="danger.gif" alt="DANGER" width="80" height="80"></a>
+      <a href="https://kapitolinab.github.io/nt/th1.html"><img src="danger.gif" alt="DANGER" width="80" height="80"></a>
       <a href="https://longdogechallenge.com/"><img src="random.gif" alt="lucky" width="80" height="80"></a>
       <a href="https://kirieshki-viki.fandom.com/ru/wiki/%D0%9A%D0%B8%D1%80%D0%B8%D0%B5%D1%88%D0%BA%D0%B8_%D0%92%D0%B8%D0%BA%D0%B8">
       <img src="pattern.gif" alt="swirlyyy" width="80" height="80">
@@ -94,7 +94,7 @@
       <tr>
          <td>Rosovi Bunny</td>
          <td>beautiful розовы крол</td>
-         <td><a href="file:///C:/Users/%D0%9A%D0%B0%D0%BF%D0%BE%D1%87%D0%BA%D0%B0/Documents/destroyka/dmwm/th3.html"><img src="RK.png" alt="BNUY" width="150" height="150"></a></td>
+         <td><a href="https://kapitolinab.github.io/nt/th3.html"><img src="RK.png" alt="BNUY" width="150" height="150"></a></td>
       </tr>
       <tr>
          <td>Mishutka</td>
@@ -137,6 +137,7 @@
       </center>
    </body>
 </html>
+
 
 
 
