--- a/th1.html
+++ b/th1.html
@@ -36,17 +36,18 @@
     </center>
     <nav class="n">
          <ul class="np">
-            <li><a href="file:///C:/Users/%D0%9A%D0%B0%D0%BF%D0%BE%D1%87%D0%BA%D0%B0/Documents/destroyka/dmwm/toyhouse.html">glavnaia</a></li>
-            <li><a href="file:///C:/Users/%D0%9A%D0%B0%D0%BF%D0%BE%D1%87%D0%BA%D0%B0/Documents/destroyka/dmwm/th1.html" class="active">about us</a></li>
-            <li><a href="file:///C:/Users/%D0%9A%D0%B0%D0%BF%D0%BE%D1%87%D0%BA%D0%B0/Documents/destroyka/dmwm/th2.html">toys availible</a></a></li>
-            <li><a href="file:///C:/Users/%D0%9A%D0%B0%D0%BF%D0%BE%D1%87%D0%BA%D0%B0/Documents/destroyka/dmwm/th3.html">apply for a toy now!</a></a></li>
+            <li><a href="https://kapitolinab.github.io/nt/">glavnaia</a></li>
+            <li><a href="https://kapitolinab.github.io/nt/th1.html" class="active">about us</a></li>
+            <li><a href="https://kapitolinab.github.io/nt/th2.html">toys availible</a></a></li>
+            <li><a href="https://kapitolinab.github.io/nt/th3.html">apply for a toy now!</a></a></li>
          </ul>
       </nav>
 
     <center>
-        <h1 style= "font-family: 'Comic Sans MS'; font-size: 24x; color: rgb(165, 0, 0);"> there is absolutely <a href="file:///C:/Users/%D0%9A%D0%B0%D0%BF%D0%BE%D1%87%D0%BA%D0%B0/Documents/destroyka/dmwm/passport.html">nothing</a> you need to know about us. the creator of this website is a normal human being just like you and me.</h1>
+        <h1 style= "font-family: 'Comic Sans MS'; font-size: 24x; color: rgb(165, 0, 0);"> there is absolutely <a href="https://kapitolinab.github.io/nt/passport.html">nothing</a> you need to know about us. the creator of this website is a normal human being just like you and me.</h1>
         <h1 style= "font-family: 'Comic Sans MS'; font-size: 24x; color: rgb(165, 0, 0);"> contacts: don't.</h1>
     </center>
 </body>
 </html>
+
 
