--- a/th1.html
+++ b/th1.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>i am honestly unsure</title>
+    <title>i am honestly unsure...</title>
     <style>
          .n {
             text-align: center;
@@ -49,5 +49,6 @@
     </center>
 </body>
 </html>
+
 
 
