--- a/th3.html
+++ b/th3.html
@@ -39,10 +39,10 @@
     </center>
   <nav class="n">
          <ul class="np">
-            <li><a href="file:///C:/Users/%D0%9A%D0%B0%D0%BF%D0%BE%D1%87%D0%BA%D0%B0/Documents/destroyka/dmwm/toyhouse.html">glavnaia</a></li>
-            <li><a href="file:///C:/Users/%D0%9A%D0%B0%D0%BF%D0%BE%D1%87%D0%BA%D0%B0/Documents/destroyka/dmwm/th1.html">about us</a></li>
-            <li><a href="file:///C:/Users/%D0%9A%D0%B0%D0%BF%D0%BE%D1%87%D0%BA%D0%B0/Documents/destroyka/dmwm/th2.html">toys availible</a></a></li>
-            <li><a href="file:///C:/Users/%D0%9A%D0%B0%D0%BF%D0%BE%D1%87%D0%BA%D0%B0/Documents/destroyka/dmwm/th3.html" class="active">apply for a toy now!</a></a></li>
+            <li><a href="https://kapitolinab.github.io/nt/">glavnaia</a></li>
+            <li><a href="https://kapitolinab.github.io/nt/th1.html">about us</a></li>
+            <li><a href="https://kapitolinab.github.io/nt/th2.html">toys availible</a></a></li>
+            <li><a href="https://kapitolinab.github.io/nt/th3.html" class="active">apply for a toy now!</a></a></li>
          </ul>
       </nav>
 
@@ -88,3 +88,4 @@
 </form>
 </body>
 </html>
+
