--- a/th4.html
+++ b/th4.html
@@ -36,7 +36,7 @@
   </tr>
   <tr style="height:400px">
     <td>YEAH THIS IS OUR BEST TOY</td>
-    <td style="width:60%"><img src="PARAVOZ.png" alt="bliss" width="80" height="80"></td>
+    <td style="width:60%">,<a href="https://kapitolinab.github.io/nt/"><img src="PARAVOZ.png" alt="bliss" width="80" height="80"></a></td>
     <td style="width:40%">i am extremely sleep-deprived</td>
   </tr>
   <tr>
@@ -45,3 +45,4 @@
 </table>
 </body>
 </html>
+
