--- a/index.html
+++ b/index.html
@@ -99,12 +99,12 @@
       <tr>
          <td>Mishutka</td>
          <td>awesome пльюш медвед</td>
-         <td><a href="file:///C:/Users/%D0%9A%D0%B0%D0%BF%D0%BE%D1%87%D0%BA%D0%B0/Documents/destroyka/dmwm/th3.html"><img src="TB.png" alt="BEAR" width="150" height="150"></a></td>
+         <td><a href="https://kapitolinab.github.io/nt/th3.html"><img src="TB.png" alt="BEAR" width="150" height="150"></a></td>
        </tr>
       <tr>
          <td>Kookla</td>
          <td>MAGNIFICENT kukolka фо ёр дотхер</td>
-         <td><a href="file:///C:/Users/%D0%9A%D0%B0%D0%BF%D0%BE%D1%87%D0%BA%D0%B0/Documents/destroyka/dmwm/th3.html"><img src="D.png" alt="DOLL" width="150" height="150"></a></td>
+         <td><a href="https://kapitolinab.github.io/nt/th3.html"><img src="D.png" alt="DOLL" width="150" height="150"></a></td>
       </tr>
       <tr>
          <td>Eldritch Horror</td>
@@ -129,7 +129,7 @@
       <tr id="ct">
          <td>PARAVOZ</td>
          <td>ALL HAIL PARAVOZ</td>
-         <td><a href="file:///C:/Users/%D0%9A%D0%B0%D0%BF%D0%BE%D1%87%D0%BA%D0%B0/Documents/destroyka/dmwm/th4.html"><img src="PARAVOZ.png" alt="PARAVOZ" width="150" height="150"></td>
+         <td><a href="https://kapitolinab.github.io/nt/th4.html"><img src="PARAVOZ.png" alt="PARAVOZ" width="150" height="150"></td>
       </tr>
       </table>
       <center>
@@ -137,6 +137,7 @@
       </center>
    </body>
 </html>
+
 
 
 
