--- a/passport.html
+++ b/passport.html
@@ -49,7 +49,8 @@
             }
         }
     </script>
-    <p>prasprt</p>
+    <a href="https://kapitolinab.github.io/nt/pass2.html"><p>prasprt</p></a>
    </body>
 
 </html>
+
